objects/NotifierObject__c.object
<CustomObject>
    <description>LEX(Lightning)移行時 削除予定</description>
    <fields>
        <fullName>NO_Posting__c</fullName>
        <description>現在、掲載中期間であれば、TRUE</description>
        <formula>startDate__c    &lt;=  TODAY()     &amp;&amp;   TODAY() &lt;= endDate__c</formula>
        <label>掲載中</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>contentFontColor__c</fullName>
        <defaultValue>&quot;black&quot;</defaultValue>
        <label>お知らせ事項の色</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>contentFontSize__c</fullName>
        <defaultValue>2</defaultValue>
        <label>お知らせ事項の文字サイズ</label>
        <precision>2</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>contents__c</fullName>
        <label>お知らせ事項</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>detailUrl__c</fullName>
        <label>お知らせ詳細 URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>endDate__c</fullName>
        <label>掲載終了日</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>headerFontColor__c</fullName>
        <defaultValue>&quot;blue&quot;</defaultValue>
        <label>見出しの色</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>headerFontSize__c</fullName>
        <defaultValue>2</defaultValue>
        <label>見出しの文字サイズ</label>
        <precision>2</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>orderNumber__c</fullName>
        <label>表示順</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>startDate__c</fullName>
        <label>掲載開始日</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <label>お知らせ事項</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>contents__c</columns>
        <columns>orderNumber__c</columns>
        <columns>NO_Posting__c</columns>
        <columns>startDate__c</columns>
        <columns>endDate__c</columns>
        <columns>CREATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <label>すべて選択</label>
        <language>ja</language>
    </listViews>
    <listViews>
        <fullName>now</fullName>
        <columns>NAME</columns>
        <columns>contents__c</columns>
        <columns>orderNumber__c</columns>
        <columns>NO_Posting__c</columns>
        <columns>startDate__c</columns>
        <columns>endDate__c</columns>
        <columns>CREATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>NO_Posting__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>掲載中</label>
        <language>ja</language>
    </listViews>
    <nameField>
        <label>見出し名</label>
        <type>Text</type>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>